--- a/firebase.json
+++ b/firebase.json
@@ -1,15 +1,11 @@
 {
   "hosting": {
-    "public": ".",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
+    "public": "public",         // hoặc "build", tuỳ thư mục bạn chứa file
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "rewrites": [
       {
         "source": "**",
-        "destination": "/index.html"
+        "destination": "/sub-index.html"
       }
     ]
   }
