--- a/firebase.json
+++ b/firebase.json
@@ -1,20 +1,10 @@
 {
   "hosting": {
-    "public": "public",  // Thư mục chứa index.html và index2.html
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
+    "public": "public",
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "rewrites": [
-      {
-        "source": "/contract/support-case-id=36306628447",
-        "destination": "/index2.html"
-      },
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
+      { "source": "/contract/support-case-id=36306628447", "destination": "/index2.html" },
+      { "source": "**", "destination": "/index.html" }
     ]
   }
 }
